Add Caddy reverse proxy and domain-based backend URL; prepare HTTPS hosting on Docker Desktop

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   angel-one:
     image: denoland/deno:1.43.6
@@ -20,8 +19,27 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
-        - VITE_BACKEND_URL=http://localhost:8000
+        - VITE_BACKEND_URL=https://api.${DOMAIN}
     ports:
       - "3000:3000"
     depends_on:
       - angel-one
+
+  caddy:
+    image: caddy:2
+    ports:
+      - "80:80"
+      - "443:443"
+    environment:
+      - DOMAIN=${DOMAIN}
+    volumes:
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
+      - caddy-data:/data
+      - caddy-config:/config
+    depends_on:
+      - frontend
+      - angel-one
+
+volumes:
+  caddy-data:
+  caddy-config:
