--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ dist
 dist-ssr
 *.local
 
+# Environment files with secrets
+.env.angelone
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
