--- a/server/trading-worker/package.json
+++ b/server/trading-worker/package.json
@@ -8,7 +8,10 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.19.2",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "node-cron": "^3.0.3",
+    "@supabase/supabase-js": "^2.57.4",
+    "ws": "^8.18.0"
   }
 }
 
