--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,11 +40,13 @@ services:
       dockerfile: Dockerfile
     env_file:
       - ./.env.angelone
+      - ./.env.hosting
     environment:
       - PORT=4000
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - SUPABASE_JWT_SECRET=${SUPABASE_JWT_SECRET}
       - CORS_ALLOW_ORIGIN=${CORS_ALLOW_ORIGIN:-*}
     ports:
       - "4000:4000"
