--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,8 @@ services:
         condition: service_healthy
       angel-one:
         condition: service_started
+    # Allow nginx to start even if trading-worker takes longer
+    # Health check will retry up to 5 times with 60s start period
     networks:
       - default
     restart: unless-stopped
@@ -73,8 +75,8 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:4000/health"]
       interval: 10s
       timeout: 5s
-      retries: 3
-      start_period: 30s
+      retries: 5
+      start_period: 60s
     restart: unless-stopped
     networks:
       - default
