--- a/nginx.conf
+++ b/nginx.conf
@@ -52,15 +52,8 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-            
-            if ($request_method = 'OPTIONS') {
-                return 204;
-            }
+            # CORS is handled by the backend (trading-worker)
+            # Don't add CORS headers here to avoid duplicate headers
         }
 
         # Health check endpoint
