--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - "8000:8000"
     env_file:
       - ./.env.angelone
+    restart: unless-stopped
+    networks:
+      - default
 
   frontend:
     build:
@@ -20,6 +23,9 @@ services:
       - "3000:3000"
     depends_on:
       - angel-one
+    restart: unless-stopped
+    networks:
+      - default
 
   nginx:
     image: nginx:alpine
